--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                 <div class="text-3">Student's Junior Frontend Web Developer</div>
                 <a href="#projects">PORTFOLIO</a>
             </div>
-            <div class="home-img">
-                <img src="img/profil.jpg" alt="">
-            </div>
+            <div class="home-img"></div>
         </div>
     </section>
 
