--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 
     <!-- home section start -->
-    <section class="home" id="home">
+     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Halo,</div>
@@ -148,10 +148,10 @@
         <h4><span>F</span>R<span>E</span>D<span>I</span> <span>I</span>R<span>A</span><span>W</span>A<span>N</span></h4>
         <div class="social">
           <div>
-            <a href=""><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /></a>
+            <a href="https://instagram.com/freddyy_irw"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /></a>
           </div>
           <div class="social-github">
-            <a href=""><img src="https://img.icons8.com/sf-ultralight-filled/48/000000/github.png"/></a>
+            <a href="https://github.com/Freddy7811"><img src="https://img.icons8.com/sf-ultralight-filled/48/000000/github.png"/></a>
           </div>
       </div>
         <p class="end">Copyright <span>Fredi Irawan.</span> All rights reserved</p>
