--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Alamat</div>
-                                <div class="sub-title">Jl. Lo'Andeng, Dau, Kota Malang   </div>
+                                <div class="sub-title">Jl. Dieng Atas No.21 Lo'Andeng, 
+                                    <br>Dau, Kota Malang   </div>
                             </div>
                         </div>
                        
