--- a/index.html
+++ b/index.html
@@ -123,17 +123,17 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form action="#" name="freddy-contact-form">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" name="nama" placeholder="Name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" name="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea name="pesan" cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
@@ -146,7 +146,7 @@
 
     <!-- footer section start -->
    <footer>
-        <h4><span>F</span>R<span>E</span>D<span>I</span> <span>I</span>R<span>A</span><span>W</span>A<span>N</span></h4>
+        <h4><span>F</span>RED<span>I</span> <span>I</span>RAWA<span>N</span></h4>
         <div class="social">
           <div>
             <a href="https://instagram.com/freddyy_irw"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /></a>
@@ -159,5 +159,7 @@
     </footer>
 
     <script src="script.js"></script>
+    h
+
 </body>
 </html>
