--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="background.scss">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -36,13 +37,35 @@
      <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Halo,</div>
-                 <div class="text1">Nama Saya</div>
+                <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Fredi Irawan</div>
                 <div class="text-3">Student's Junior Frontend Web Developer</div>
                 <a href="#projects">PORTFOLIO</a>
             </div>
         </div>
+        
+<div class="night">
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+  <div class="shooting_star"></div>
+</div>
     </section>
 
     <!-- about section start -->
@@ -112,7 +135,7 @@
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
-                                <div class="head">Alamat</div>
+                                <div class="head">Address</div>
                                 <div class="sub-title">Jl. Dieng Atas No.21 Lo'Andeng, 
                                     <br>Dau, Kota Malang   </div>
                             </div>
@@ -121,6 +144,7 @@
                     </div>
                 </div>
                 <div class="column right">
+                    <!-- <div>Thank You, We have received your message</div> -->
                     <div class="text">Message me</div>
                     <form action="#" name="freddy-contact-form">
                         <div class="fields">
